feat: send more

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-websockets-lite",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "description": "websocket trigger event",
   "keywords": [
     "n8n-community-node-package"
@@ -52,5 +52,6 @@
   },
   "dependencies": {
     "ws": "^8.18.0"
-  }
+  },
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
 }
